--- a/HW1/HW1_EmbeddedReport.ipynb
+++ b/HW1/HW1_EmbeddedReport.ipynb
@@ -1,24 +1,12 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "63fc5e86",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from sklearn import datasets, linear_model\n",
-    "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import OneHotEncoder"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "420a458a",
    "metadata": {},
    "source": [
-    "# three_layer_neuron_network.py"
+    "# three_layer_neuron_network.py\n",
+    "> The code below is copied from my three_layer_neuron_network.py file for reference. This address 1a, 1b, 1c, and 1d.2. The handwritten derivations of the backprop equations are attached as a PDF to the bottom of this report."
    ]
   },
   {
@@ -249,14 +237,13 @@
     "        delta3[range(num_examples), y] -= 1\n",
     "\n",
     "        # dW2 = dL/dW2\n",
-    "        dW2 = np.dot(self.a1.T, delta3)\n",
+    "        dW2 = self.a1.T @ delta3\n",
     "        # db2 = dL/db2\n",
     "        db2 = np.sum(delta3, axis=0, keepdims=True)\n",
     "        # Need to find delta2 for earlier layer\n",
-    "        diff = self.diff_actFun(self.z1, type=self.actFun_type) # Should z1 be a1?\n",
-    "        delta2 = np.dot(delta3, self.W2.T) * diff\n",
+    "        delta2 = (delta3 @ self.W2.T) * self.diff_actFun(self.z1, type=self.actFun_type)\n",
     "        # dW1 = dL/dW1\n",
-    "        dW1 = np.dot(X.T, delta2)\n",
+    "        dW1 = X.T @ delta2\n",
     "        # db1 = dL/db1\n",
     "        db1 = np.sum(delta2, axis=0) #, keepdims=False\n",
     "\n",
@@ -278,7 +265,7 @@
     "            # Backpropagation\n",
     "            dW1, dW2, db1, db2 = self.backprop(X, y)\n",
     "\n",
-    "            # Add regularization terms (b1 and b2 don't have regularization terms)\n",
+    "            # Add regularization terms\n",
     "            dW2 += self.reg_lambda * self.W2\n",
     "            dW1 += self.reg_lambda * self.W1\n",
     "\n",
@@ -332,6 +319,7 @@
    "id": "61cf37f3",
    "metadata": {},
    "source": [
+    "## 2e.1 and 2e.2\n",
     "tanh"
    ]
   },
@@ -503,7 +491,7 @@
    "id": "e36fea2d",
    "metadata": {},
    "source": [
-    "> __Conclusions:__ "
+    "> __Conclusions:__ It is clear that the different activation functions make a big difference in the output. In this case, the decision boundaries between sigmoid and tanh are very similar, which is somewhat expected as they are both pretty smooth functions. Since the gradient didn't vanish (problem with sigmoid functions), we would expect and do see that the results are good for both sigmoid and tanh. With relu we can see the largest change, as the smoothness is gone, repalced by a couple of straight line segments (perhaps related to the number of layers used, which dictates the number of indepdent line segments the netwrok can learn). Relu of course is flat at 0 and then simple a straight line so it is not entirely suprising that using relu results in a straight lined decision boundary."
    ]
   },
   {
@@ -617,7 +605,7 @@
    "id": "d28b9313",
    "metadata": {},
    "source": [
-    "> __Conclusions:__ "
+    "> __Conclusions:__ For this example at least, while there are minute changes, it is not extremely different even tho the numberof hidden nodes per layer increased by a factor of 10. The decision boundary with more hidden nodes is slightly smoother/more intuitive (perhaps reflecting more degrees of freedom), but the actual classification boudnary is only minutely shifted."
    ]
   },
   {
@@ -625,7 +613,7 @@
    "id": "53580fb9",
    "metadata": {},
    "source": [
-    "# n_layer_neural_network.py\n",
+    "# n_layer_neural_network.py (1f)\n",
     "- We provide you hints below to help you organize and implement the code, but if you have better ideas, please feel free to implement them and ignore our hints. In your report, please tell us why you made the choice(s) you did.\n"
    ]
   },
@@ -673,7 +661,7 @@
     }
    ],
    "source": [
-    "# These are already imported\n",
+    "# These are already importaed above\n",
     "#import three_layer_neural_network as tlnn\n",
     "#import numpy as np\n",
     "#import matplotlib.pyplot as plt\n",
@@ -713,14 +701,15 @@
     "    def feedforward(self, X):\n",
     "        # YOU IMPLEMENT YOUR feedforward HERE\n",
     "        self.activations = []\n",
+    "        # First \"activation\" is just the input to the network\n",
     "        activation = X\n",
-    "\n",
     "        for layer in self.layers:\n",
+    "            # Activations of each previous layer are fed into the next\n",
     "            layer.feedforward(activation) # Sets layer.a, AKA the resulting activation\n",
     "            activation = layer.a\n",
     "            self.activations.append(activation)\n",
+    "        # Final activation is the output of softmax and thus the predicted probabilities\n",
     "        self.probs = activation\n",
-    "\n",
     "        return None\n",
     "\n",
     "    def calculate_loss(self, X, y):\n",
@@ -730,49 +719,38 @@
     "        y_onehot = OneHotEncoder(sparse_output=False).fit_transform(y.reshape((-1, 1)))\n",
     "        data_loss = (-1/num_examples) * np.sum(np.log(self.probs) * y_onehot)\n",
     "        # Add regulatization term to loss (optional)\n",
-    "        data_loss += self.reg_lambda / 2 * np.sum([np.square(layer.W).sum() for layer in self.layers])\n",
+    "        data_loss += (self.reg_lambda / 2) * np.sum([np.square(layer.W).sum() for layer in self.layers])\n",
     "        return (1. / num_examples) * data_loss\n",
     "\n",
     "    def predict(self, X):\n",
-    "        # This is DNN feedfoward:\n",
-    "        self.feedforward(X)\n",
+    "        # This is DNN feedfoward (eg not layer.feedfoward):\n",
+    "        self.feedforward(X) # This sets self.probs\n",
+    "        # argmax is the class with the highest predicted probability\n",
     "        return np.argmax(self.probs, axis=1)\n",
     "\n",
     "    def backprop(self, X, y):\n",
     "        # IMPLEMENT YOUR BACKPROP HERE\n",
     "        num_examples = len(X)\n",
+    "        # delta3 is the output of the neural network, adjusted for predicting what the correct class is\n",
     "        delta3 = self.probs.copy()\n",
     "        delta3[range(num_examples), y] -= 1\n",
     "        # Use Layer()-wise backprop\n",
+    "        # Derivative of the activation\n",
     "        da = self.layers[-1].backprop(da=None, a_previous=self.layers[-2].a, dz=delta3)\n",
-    "        \n",
     "        # Iterate through [n_layers-3, n_layers-4, ... , 1]\n",
     "        for i in np.arange(1, self.n_layers-2)[::-1]:\n",
+    "            # Note: layer.backprop DOES return something, but dnn.backprop does NOT\n",
     "            da = self.layers[i].backprop(da=da, a_previous=self.layers[i-1].a)\n",
-    "            \n",
     "        self.layers[0].backprop(da, X)\n",
-    "        \n",
     "        return None\n",
     "\n",
     "    def fit_model(self, X, y, epsilon=0.01, num_passes=20000, print_loss=True):\n",
-    "        '''\n",
-    "        fit_model uses backpropagation to train the network\n",
-    "        :param X: input data\n",
-    "        :param y: given labels\n",
-    "        :param num_passes: the number of times that the algorithm runs through the whole dataset\n",
-    "        :param print_loss: print the loss or not\n",
-    "        :return:\n",
-    "        '''\n",
-    "        # Gradient descent.\n",
+    "        # Eg run gradient descent for num_passes iters\n",
     "        for i in range(0, num_passes):\n",
-    "            # Forward propagation\n",
     "            self.feedforward(X)\n",
-    "            # Backpropagation\n",
     "            self.backprop(X, y)\n",
-    "            \n",
     "            for layer in self.layers:\n",
     "                layer.gradient_step(epsilon, self.reg_lambda)\n",
-    "\n",
     "            # Optionally print the loss.\n",
     "            # This is expensive because it uses the whole dataset, so we don't want to do it too often.\n",
     "            if print_loss and i % 1000 == 0:\n",
@@ -780,46 +758,36 @@
     "                print(\"Accuracy after iteration %i: %f\" % (i, (self.probs.argmax(axis=1) == y).sum() / len(y)))\n",
     "\n",
     "    def visualize_decision_boundary(self, X, y):\n",
-    "        '''\n",
-    "        visualize_decision_boundary plots the decision boundary created by the trained network\n",
-    "        :param X: input data\n",
-    "        :param y: given labels\n",
-    "        :return:\n",
-    "        '''\n",
     "        plot_decision_boundary(lambda x: self.predict(x), X, y)\n",
     "\n",
     "class Layer(object):\n",
     "    def __init__(self, neuralnet_obj, nn_input_dim, nn_output_dim, actFun_type='tanh'):\n",
-    "        self.neuralnet_obj = neuralnet_obj\n",
+    "        self.neuralnet_obj = neuralnet_obj # Required in order to access self.activationfuncs defined in dnn class\n",
     "        self.nn_input_dim = nn_input_dim\n",
     "        self.nn_output_dim = nn_output_dim\n",
     "        self.actFun_type = actFun_type\n",
     "        # Init weight and biases to random matrix and vector of zeros, respectively\n",
-    "        self.W = np.random.randn(self.nn_input_dim, self.nn_output_dim) / np.sqrt(self.nn_input_dim)\n",
+    "        self.W = (1/np.sqrt(self.nn_input_dim)) * np.random.randn(self.nn_input_dim, self.nn_output_dim) \n",
     "        self.b = np.zeros((1, self.nn_output_dim))\n",
     "        \n",
     "    # Implement feedforward for a single layer\n",
     "    def feedforward(self, X):\n",
-    "        self.z = X@self.W + self.b\n",
+    "        self.z = X @ self.W + self.b\n",
     "        self.a = self.neuralnet_obj.actFun(self.z, self.actFun_type)\n",
-    "        #self.z = X.dot(self.W) + self.b\n",
-    "        #self.a = self.dnn_instance.actFun(self.z, self.actFun_type)\n",
-    "        #return self.a\n",
     "        return None\n",
     "    \n",
     "    # Implement backprop for a single layer\n",
     "    def backprop(self, da, a_previous, dz=None):\n",
-    "        # z is the output (after the activation layer)\n",
+    "        # z is the output\n",
     "        # a is the actual activation\n",
     "        # W, b are the weights and biases\n",
     "        if dz is None:\n",
     "            self.dz = self.neuralnet_obj.diff_actFun(self.z, self.actFun_type) * da\n",
     "        else:\n",
     "            self.dz = dz\n",
-    "        self.dW = a_previous.T.dot(self.dz)\n",
-    "        self.db = self.dz.sum(axis=0, keepdims=True)\n",
-    "        da_previous = self.dz.dot(self.W.T)\n",
-    "        return da_previous\n",
+    "        self.dW = a_previous.T @ self.dz\n",
+    "        self.db = np.sum(self.dz, axis=0, keepdims=True)\n",
+    "        return self.dz @ self.W.T\n",
     "                                            \n",
     "    def gradient_step(self, epsilon, reg_lambda):\n",
     "        self.dW += reg_lambda * self.W\n",
@@ -1081,6 +1049,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ebc5d07c",
+   "metadata": {},
+   "source": [
+    "> __Conclusion:__ It is clear that when using many model layers, for this task at least, the network cannot converge (represented by the orange background indicating poor performance as it is not sure what to classify). Note that in this example, we keep the number of hidden nodes per layer fixed, and thus we could probably get it to converge by playing with other hyperparams, but here I am only interersted in showing how the number of layers affects the decision boundary. Clearly, this dataset is best suited for just a few model layer (<10)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "66d0bba9",
    "metadata": {},
    "source": [
@@ -1191,6 +1167,14 @@
     "deep_model_tanh_5_10.fit_model(X, y, num_passes=10000)\n",
     "plt.title(f'{actFun_type}, {num_layers} layers of size {hidden_neurons_per_layer}') \n",
     "deep_model_tanh_5_10.visualize_decision_boundary(X,y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "641392b5",
+   "metadata": {},
+   "source": [
+    "> __Conclusion:__ Again, like we observed in the 3 layer case, relu makes the decision bounary straight lines whereas tanh and sigmoid are able to draw smoother curves. In this case, for this fixed network size, the smoother curves do a much better job (98% vs 81% accuracy)."
    ]
   },
   {
@@ -1419,7 +1403,8 @@
    "id": "a80b2158",
    "metadata": {},
    "source": [
-    "> __Conclusion:__ "
+    "> __Conclusion:__ Again note that when we use a small number of model layers, we are able to get the network to converge, but once we start using more than 10 or so layers, the network breaks no matter how many hidden nodes we have. Also note that above 100 hidden nodes (I didn't test to find the exact point) I start getting overflow errors which are not shown. From this analysis, it is clear that using few layers is best, and that using more hidden node (give that you do not have many layers) will impove performance until it starts to overflow. Tanh appears to be better than relu since it is smooth, and sigmoid was found to frequently not converge, presumably due to gradient vanishing.\n",
+    "- It is notable that the decision boundaries, while not perfect, are typically much better and appear to have much more expressive power than their 3 layer predecessor. That said, the 3 layer neural network is close to optimal (my findings show that ~4-5 layers with ~7 hidden nodes best fit this task)."
    ]
   },
   {
@@ -1435,7 +1420,8 @@
    "id": "24ff307c",
    "metadata": {},
    "source": [
-    "Plotting code adapted from: https://scikit-learn.org/stable/auto_examples/cluster/plot_cluster_comparison.html#sphx-glr-auto-examples-cluster-plot-cluster-comparison-py"
+    "Plotting code adapted from: https://scikit-learn.org/stable/auto_examples/cluster/plot_cluster_comparison.html#sphx-glr-auto-examples-cluster-plot-cluster-comparison-py\n",
+    "> I chose this dataset since it is pretty canonical in showing how different clustering algorithms (unsupervised ML) works, so I wanted to see if deep learning approaches also fall prey to different pitfalls like many clustering algorithms do (eg many clustering algos work for some but not others of these datasets due to how they are initlaizationed or how they determine their clusters). I expect deep learning to do better."
    ]
   },
   {
@@ -2025,7 +2011,7 @@
     "seed = 1000\n",
     "# Initialize the random seed\n",
     "logging_interval = 10 # how many batches to wait before logging\n",
-    "exact_folder = r\"\\Run4_RMSProp_WD_Momentump9\"\n",
+    "exact_folder = r\"\\RunX\"\n",
     "logging_dir = r\"C:\\Users\\kdmen\\Desktop\\Fall23\\ELEC576\\HW1\\results\" + exact_folder\n",
     "\n",
     "# 1) setting up the logging\n",
@@ -2529,7 +2515,9 @@
    "metadata": {},
    "source": [
     "## 2c\n",
-    "- As you have noticed, I use ReLU non-linearity, and Adam training algorithm in our sample code. In this section, run the network training with different non-linearities (tanh, sigmoid, leaky-ReLU, MaxOut,...), initialization techniques (Xavier...) and training algorithms (SGD, Momentum-based Methods, Adagrad..). Make sure you still monitor the terms specified in part (b). Include the figures generated by TensorBoard and describe what you observe."
+    "- As you have noticed, I use ReLU non-linearity, and Adam training algorithm in our sample code. In this section, run the network training with different non-linearities (tanh, sigmoid, leaky-ReLU, MaxOut,...), initialization techniques (Xavier...) and training algorithms (SGD, Momentum-based Methods, Adagrad..). Make sure you still monitor the terms specified in part (b). Include the figures generated by TensorBoard and describe what you observe.\n",
+    "\n",
+    "> In the following, I use Xavier weight initilizations:"
    ]
   },
   {
@@ -2650,6 +2638,14 @@
    "source": [
     "given_image = r'\\final_testing_acc.png'\n",
     "display(Image(filename=run3_res_path+given_image))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9a4a3b3c",
+   "metadata": {},
+   "source": [
+    "> __Conclusion:__ While the network still does quite well, the Xavier weights make a small dip in performance (96% vs 97%), although this could perhaps be due to the random seed used in either/both of the networks."
    ]
   },
   {
@@ -2926,6 +2922,14 @@
    "source": [
     "given_image = r'\\testing_acc.png'\n",
     "display(Image(filename=run5_res_path+given_image))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a57ae4df",
+   "metadata": {},
+   "source": [
+    "> __Conclusion:__ Here, we see that vanilla RMSProp is capable of solving this problem, and thus I was correct that I simply added too many moving parts which caused RMSProp to fail last time"
    ]
   },
   {
